--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,12 +33,12 @@ jobs:
         with:
           targetPlatform: StandaloneWindows64
           buildsPath: Build
-          buildName: GORF-win64
+          buildName: ${{ github.event.repository.name }}-win64
       # Upload Artifact
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: GORF-win64
+          name: ${{ github.event.repository.name }}-win64
           path: Build
       - name: Log Contents
         run: |
@@ -46,7 +46,7 @@ jobs:
       - name: Zip Build
         run: |
           cd Build/StandaloneWindows64
-          sudo zip -r GORF-win64.zip .
+          sudo zip -r ${{ github.event.repository.name }}-win64.zip .
       - name: Log Contents
         run: |
           ls -xal Build/StandaloneWindows64
@@ -54,5 +54,5 @@ jobs:
       - name: Upload Release
         uses: softprops/action-gh-release@v1
         with:
-          files: Build/StandaloneWindows64/GORF-win64.zip
-          name: build-${{ steps.date.outputs.date }}
+          files: Build/StandaloneWindows64/${{ github.event.repository.name }}-win64.zip
+          name: ${{ github.event.repository.name }}-${{ steps.date.outputs.date }}
